double line issue on mobile fix

--- a/wordpress/wp-content/themes/magnetics/sass/partials/_product_slide.scss
+++ b/wordpress/wp-content/themes/magnetics/sass/partials/_product_slide.scss
@@ -119,7 +119,7 @@
     .stem_bg_white {
         background: #fff;
         height: 100%;
-        left: 37px;
+        left: 31px;
         position: fixed;
         top: 0;
         width: 70px;
@@ -132,7 +132,7 @@
         @include transition(all 0.5s);
         background: #67c4a1;
         height: 50%;
-        left: 37px;
+        left: 31px;
         position: fixed;
         top: 0px;
         width: 70px;
